# schroedinger

./: CMakeLists.txt  Makefile  README  cschroed.pyx  dft.h  pairs.py  report.py  schroedinger.py  site_cfg_template.py  square.mesh  t.py
doc/: Makefile  main.tex
script/: config.py
